# taper_research

./: .gitignore  README.md  pyproject.toml
src/taper_research/ftools/: __init__.py  _value_dispatch.py
utils/: auto_tag.py
